k8sbfr-kube-web-view/ingress-kube-web-view.yaml
apiVersion: networking.k8s.io/v1
#apiVersion: v1
kind: Ingress
metadata:
  name: k8sbfr-kubWebView
spec:
  ingressClassName: nginx
  rules:
    - host: k8sbfr.zapto.org
      http:
        paths:
          - path: /kubeWebView
            pathType: Prefix
            backend:
              service:
                name: kube-web-view
                port: 
                  number: 80
